[B]0.0.2[/B]
- Removed a lot of unnecessary code
- Added depends on youtube plugin
- Added depends on mmafighting plugin
- Added new feeds:
    # BellatorMMA (Youtube)
    # Eddie Bravo (Youtube)
    # Evolve Mixed Martial Arts (Youtube)
    # HDNet Fights (Youtube)
    # Iron Forges Iron (Youtube)
    # Middleeasy TV (Youtube)
    # MMAFighting.com (Plugin)
    # MMAinterviews.tv (Youtube)
    # MMAWeekly.com Videos (Youtube)
    # MMA H.E.A.T. (Youtube)
    # MMA: Inside the Cage (Youtube)
    # MMA Nuts (RSS)
    # StillW1ll (Youtube)
    # UFC (Youtube)
    # Whoa! TV (Youtube)
    # www.MMA30.com (Youtube)


[B]0.0.1[/B]
- Initial alpha version