@@ -2,7 +2,7 @@
 <addon
 	id="plugin.video.fightcasts"
 	name="FightCasts"
-	version="0.0.2"
+	version="0.0.3"
 	provider-name="paddycarey"
     >
   <requires>
