@@ -1,0 +1,113 @@
+"""
+List of feeds to be used in default.py
+
+Skeleton feed:
+
+    {   'title'     : '',
+        'url'       : '',
+        'thumbnail' : '',
+        'fanart'    : '', } , """
+
+video = [ 
+
+    {   'title'     : 'Bellator MMA (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=BellatorMMA&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/bellator.jpg',
+        'fanart'    : 'http://mmaartwork.wackwack.co.uk/promotions/Bellator-fanart.jpg', } ,
+    
+    {   'title'     : 'Eddie Bravo (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=twistereddie&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/twistereddie.jpg',
+        'fanart'    : '', } ,
+    
+    {   'title'     : 'Evolve Mixed Martial Arts (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=evolvemma&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/evolvemma.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'HDNet Fights (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=HDNetFights&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/hdnetfights.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'Iron Forges Iron (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=ironforgesiron&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/ironforgesiron.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'Middleeasy TV (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=MiddleEasyTV&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/middleeasy.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'MMAFighting.com (Plugin)',
+        'url'       : 'plugin://plugin.video.mmafighting',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/mmafighting.png',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'MMAinterviews.tv (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=MMAinterviews&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/mmainterviews.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'MMAWeekly.com Videos (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=MMAWeeklyVideos&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/mmaweekly.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'MMA H.E.A.T. (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=mmaheat&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/mmaheat.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'MMA: Inside the Cage (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=MMAInsideTheCageTV&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/MMAInsideTheCageTV.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'MMA Nuts (RSS)',
+        'url'       : 'rss://mmanuts.com:80/feed/podcast',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/mmanuts.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'The Reem (Vimeo)',
+        'url'       : 'plugin://plugin.video.vimeo/?path=/root/contacts&folder=true&contact=thereem&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/thereem.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'NickTheFace MMA Promos (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=NickTheFace2&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/NickTheFace2.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'StillW1ll (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=StillW1ll&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/stillwill.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'The Fight Nerd (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=TheFightNerd&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/TheFightNerd.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'The Fight Network (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=TheFightNetwork&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/TheFightNetwork.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'UFC (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=UFC&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/ufc.jpg',
+        'fanart'    : 'http://mmaartwork.wackwack.co.uk/promotions/UltimateFightingChampionship-fanart.jpg', } ,
+
+    {   'title'     : 'WHOA! TV (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=whoatv&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/whoatv.jpg',
+        'fanart'    : '', } ,
+
+    {   'title'     : 'www.MMA30.com (Youtube)',
+        'url'       : 'plugin://plugin.video.youtube/?path=/root/contacts&folder=true&contact=MMA30tv&store=contact_options&',
+        'thumbnail' : 'http://mmaartwork.wackwack.co.uk/fightcasts/MMA30tv.jpg',
+        'fanart'    : '', } ,
+
+]
